homework/5.kubernetes-network/redmine/rm_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine
  labels:
    app: redmine
spec:
  type: NodePort
  ports:
   - port: 3000
  selector:
   app: redmine
