homework/5.kubernetes-network/redmine/rm_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx-example
  rules:
  - host: redmine.my
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redmine
            port:
              number: 80
